feat: Implementa o endpoint responsável por cadastrar uma nova venda
