# app/Http/Controllers/ProductController.php
@@ -17,10 +17,10 @@ class ProductController extends Controller
     /**
      * @OA\Get(
      *     path="/api/products",
-     *     tags={"Produtos"},
+     *     tags={"Produto"},
      *     summary="Listagem de todos os produtos",
      *     description="Obtêm toda a listagem de produtos cadastrados",
-     *     @OA\Response(response="200", description="Successful operation")
+     *     @OA\Response(response="200", description="Sucesso")
      * )
      */
     public function list()
